# esp32s3_pose

./: .gitignore  CMakeLists.txt  changes.diff  idf_component.yml  log.esp32s3_pose.20260707090200.txt  log.esp32s3_pose.20260707092157.txt  log.esp32s3_pose.20260707094832.txt  regression_diff.txt  sdkconfig  update_code.py
components/espressif__m5stack_core_s3/: .component_hash  CMakeLists.txt  idf_component.yml  m5stack_core_s3.c
main/: CMakeLists.txt  common_defs.h  idf_component.yml  model_data.h
main/core/: app_main.c  app_main.cpp  bmi270_context.h  error_manager.c  error_manager.h  pmic_constants.h  power_manager.cpp  power_manager.h  sensor_calib.h  sensor_hal.h  sensor_ned.h  wifi_prov_handler.c  wifi_prov_handler.h
main/fusion/: calibration.cpp  calibration.h  eskf_fusion.cpp  eskf_fusion.h  kinematics.cpp  kinematics.h  nvs_calibration.cpp  nvs_calibration.h  odometry.cpp  odometry.h  physics_constants.h
main/hal/: hal_imu.cpp  hal_imu.h  hal_pmic.c  hal_pmic.h  hal_touch.cpp  hal_touch.h
main/hardware/: cores3_hardware.h  display_cube.c  display_manager.c  display_manager.h
main/ml/: eskf_fusion.c  eskf_fusion.h  inference_manager.cpp  inference_manager.h
main/ui/: ui_render.cpp  ui_render.h
